tests/lean/run/issue4063.lean
/-- error: no goals to be solved -/
#guard_msgs in
example : 3 = 3 := by
  rfl
  rfl
